--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Vite plugin to enable your node server HMR",
   "main": "dist/index.js",
   "dependencies": {
+    "@swc/core": "^1.2.47",
     "rollup-plugin-swc": "^0.1.4",
     "vite": "^2.0.1",
     "ws": "^7.4.3"
   },
   "devDependencies": {
+    "@nestjs/common": "^7.6.13",
+    "@types/express": "^4.17.11",
+    "@types/express-serve-static-core": "^4.17.18",
+    "@types/node": "^14.14.31",
     "@types/ws": "^7.4.0"
   },
   "scripts": {
