--- a/package.json
+++ b/package.json
@@ -3,21 +3,40 @@
   "version": "0.0.1",
   "description": "Vite plugin to enable your node server HMR",
   "main": "dist/index.js",
+  "bin": {
+    "vite-node": "dist/vite-node.js"
+  },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@swc/core": "^1.2.47",
     "rollup-plugin-swc": "^0.1.4",
     "vite": "^2.0.1",
-    "ws": "^7.4.3"
+    "websocket": "^1.0.33"
   },
   "devDependencies": {
     "@nestjs/common": "^7.6.13",
     "@types/express": "^4.17.11",
-    "@types/express-serve-static-core": "^4.17.18",
     "@types/node": "^14.14.31",
-    "@types/ws": "^7.4.0"
+    "@types/websocket": "^1.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "chalk": "^4.1.0",
+    "eslint": "^7.20.0",
+    "eslint-plugin-node": "^11.1.0",
+    "express": "^4.17.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-bundle": "tsc",
+    "build": "run-s prebuild build-bundle",
+    "dev": "tsc -w",
+    "lint": "eslint --ext .ts src/**",
+    "prebuild": "rimraf dist && npm run lint"
   },
   "repository": {
     "type": "git",
