--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vite plugin to enable your node server HMR",
   "main": "dist/index.js",
   "bin": {
-    "vite-node": "dist/vite-node.js"
+    "vite-node": "bin/vite-node.js"
   },
   "files": [
     "dist"
@@ -32,8 +32,8 @@
     "typescript": "^4.1.5"
   },
   "scripts": {
-    "build-bundle": "tsc",
-    "build": "run-s prebuild build-bundle",
+    "build-dist": "tsc",
+    "build": "run-s prebuild build-dist",
     "dev": "tsc -w",
     "lint": "eslint --ext .ts src/**",
     "prebuild": "rimraf dist && npm run lint"
