--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "vite-node": "bin/vite-node.js"
   },
   "files": [
-    "dist"
+    "dist",
+    "bin"
   ],
   "dependencies": {
     "@swc/core": "^1.2.47",
@@ -34,7 +35,7 @@
   "scripts": {
     "build-dist": "tsc",
     "build": "run-s prebuild build-dist",
-    "dev": "tsc -w",
+    "dev": "tsc -w --incremental",
     "lint": "eslint --ext .ts src/**",
     "prebuild": "rimraf dist && npm run lint"
   },
