--- a/examples/fastify/package.json
+++ b/examples/fastify/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-example",
+  "name": "fastify-example",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -7,9 +7,7 @@
     "dev": "vite-node"
   },
   "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "vite-plugin-node": "0.0.10"
+    "fastify": "^3.20.1",
+    "vite-plugin-node": "^0.0.10"
   }
 }
