--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-node",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Vite plugin to enable your node server HMR",
   "main": "dist/index.js",
   "engines": {
@@ -15,14 +15,14 @@
   ],
   "dependencies": {
     "@rollup/pluginutils": "^4.1.0",
-    "@swc/core": "^1.2.54",
+    "@swc/core": "^1.2.76",
     "chalk": "^4.1.0",
     "debug": "^4.3.1",
     "koa-connect": "^2.1.0",
     "vite": "^2.4.4"
   },
   "devDependencies": {
-    "@nestjs/common": "^7.6.13",
+    "@nestjs/common": "^8.0.6",
     "@types/debug": "^4.1.5",
     "@types/estree": "^0.0.46",
     "@types/express": "^4.17.11",
@@ -35,6 +35,7 @@
     "eslint": "^7.20.0",
     "eslint-plugin-node": "^11.1.0",
     "express": "^4.17.1",
+    "fastify": "^3.20.1",
     "koa": "^2.13.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
