--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "vite-node"
+    "dev": "vite"
   },
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "vite-plugin-node": "0.0.13"
+    "vite": "^2.5.0",
+    "vite-plugin-node": "0.0.14"
   }
 }
