--- a/package.json
+++ b/package.json
@@ -10,41 +10,42 @@
     "dist"
   ],
   "dependencies": {
-    "@rollup/pluginutils": "^4.1.0",
-    "@swc/core": "^1.2.76",
-    "chalk": "^4.1.0",
-    "debug": "^4.3.1"
+    "@rollup/pluginutils": "^4.1.1",
+    "@swc/core": "^1.2.93",
+    "chalk": "^4.1.2",
+    "debug": "^4.3.2"
   },
   "peerDependencies": {
-    "vite": "^2.5.0"
+    "vite": "^2.6.2"
   },
   "devDependencies": {
-    "@nestjs/common": "^8.0.6",
-    "@types/debug": "^4.1.5",
-    "@types/estree": "^0.0.46",
-    "@types/express": "^4.17.11",
+    "@nestjs/common": "^8.0.9",
+    "@types/debug": "^4.1.7",
+    "@types/estree": "^0.0.50",
+    "@types/express": "^4.17.13",
     "@types/koa": "^2.13.4",
-    "@types/node": "^14.14.31",
+    "@types/node": "^16.10.2",
     "@types/rx": "^4.1.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "eslint": "^7.20.0",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-node": "^11.1.0",
     "express": "^4.17.1",
-    "fastify": "^3.20.1",
-    "koa": "^2.13.1",
+    "fastify": "^3.22.0",
+    "koa": "^2.13.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
+    "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.7",
-    "typescript": "^4.1.5",
-    "vite": "^2.5.0"
+    "rxjs": "^7.3.1",
+    "typescript": "^4.4.3",
+    "vite": "^2.6.2"
   },
   "scripts": {
     "build-dist": "tsc",
     "build": "run-s prebuild build-dist",
     "dev": "tsc -w --incremental",
     "lint": "eslint --ext .ts src/**",
+    "format": "prettier --write .",
     "prebuild": "rimraf dist && npm run lint"
   },
   "repository": {
