--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "debug": "^4.3.2"
   },
   "peerDependencies": {
-    "vite": "^2.6.2"
+    "vite": "^2.8.0"
   },
   "devDependencies": {
     "@marblejs/core": "^4.0.2",
@@ -59,10 +59,10 @@
     "koa": "^2.13.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.1",
     "typescript": "^4.4.3",
-    "vite": "^2.6.2",
-    "reflect-metadata": "^0.1.13"
+    "vite": "^2.6.2"
   }
 }
