--- a/examples/nest/package.json
+++ b/examples/nest/package.json
@@ -33,6 +33,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@swc/core": "^1.2.155",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.0.0",
@@ -51,7 +52,7 @@
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5",
     "vite": "^2.8.0",
-    "vite-plugin-node": "^0.0.17"
+    "vite-plugin-node": "^0.0.18"
   },
   "jest": {
     "moduleFileExtensions": [
