--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
+    "debug": "vite --debug --inspect-brk",
     "build": "vite build"
   },
   "dependencies": {
@@ -12,6 +13,6 @@
   },
   "devDependencies": {
     "vite": "^2.8.0",
-    "vite-plugin-node": "0.0.18"
+    "vite-plugin-node": "0.0.19"
   }
 }
