--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
+    "dev-flag": "NODE_OPTIONS='--experimental-fetch' vite",
     "debug": "vite --debug --inspect-brk",
     "build": "vite build"
   },
@@ -12,7 +13,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "vite": "^2.8.0",
-    "vite-plugin-node": "0.0.19"
+    "vite": "^2.9.0",
+    "vite-plugin-node": "workspace:*"
   }
 }
