--- a/examples/marble/package.json
+++ b/examples/marble/package.json
@@ -25,7 +25,7 @@
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "vite": "^2.8.0",
-    "vite-plugin-node": "^0.0.19"
+    "vite": "^2.9.0",
+    "vite-plugin-node": "workspace:*"
   }
 }
