--- a/packages/vite-plugin-node/package.json
+++ b/packages/vite-plugin-node/package.json
@@ -37,7 +37,7 @@
   },
   "peerDependencies": {
     "@swc/core": "^1.2.153",
-    "vite": "^2.9.8"
+    "vite": "^2.9.8 || ^3.0.0"
   },
   "peerDependenciesMeta": {
     "@swc/core": {
@@ -62,6 +62,6 @@
     "npm-run-all": "^4.1.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
-    "vite": "^2.9.8"
+    "vite": "^2.9.8 || ^3.0.0"
   }
 }
