--- a/examples/marble/package.json
+++ b/examples/marble/package.json
@@ -11,21 +11,21 @@
   "dependencies": {
     "@marblejs/core": "^4.0.2",
     "@marblejs/http": "^4.0.2",
+    "@marblejs/messaging": "^4.0.2",
     "@marblejs/middleware-body": "^4.0.2",
     "@marblejs/middleware-cors": "^4.0.2",
     "@marblejs/middleware-io": "^4.0.2",
     "@marblejs/middleware-logger": "^4.0.2",
     "@marblejs/middleware-multipart": "^4.0.2",
-    "@marblejs/messaging": "^4.0.2",
     "@marblejs/testing": "^4.0.2",
     "@marblejs/websockets": "^4.0.2",
-    "@types/node": "^10.1.2",
     "fp-ts": "^2.8.2",
     "rxjs": "^7.1.0",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "vite": "^2.9.0",
+    "@types/node": "14",
+    "vite": "3",
     "vite-plugin-node": "workspace:*"
   }
 }
