--- a/examples/node/package.json
+++ b/examples/node/package.json
@@ -9,7 +9,7 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "vite": "^2.9.0",
+    "vite": "3",
     "vite-plugin-node": "workspace:*"
   }
 }
