--- a/examples/marble/package.json
+++ b/examples/marble/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "14",
-    "vite": "3",
+    "vite": "^4.0.4",
     "vite-plugin-node": "workspace:*"
   }
 }
