--- a/examples/nest/package.json
+++ b/examples/nest/package.json
@@ -49,7 +49,7 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5",
-    "vite": "3",
+    "vite": "^4.0.4",
     "vite-plugin-node": "workspace:*"
   },
   "jest": {
