--- a/packages/vite-plugin-node/package.json
+++ b/packages/vite-plugin-node/package.json
@@ -29,7 +29,7 @@
     "dev": "tsc -w --incremental",
     "lint": "eslint --ext .ts src/**",
     "format": "prettier --write .",
-    "prebuild": "rimraf dist && npm run lint && cp ../../readme.md ./readme.md"
+    "prebuild": "rimraf dist && npm run lint && cp ../../README.md ./readme.md"
   },
   "dependencies": {
     "@rollup/pluginutils": "^4.1.1",
@@ -62,6 +62,7 @@
     "koa": "^2.13.3",
     "npm-run-all": "^4.1.5",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
     "vite": "^4.0.0"
   }
