feat: add support for Vite 5

--- a/packages/vite-plugin-node/tsconfig.json
+++ b/packages/vite-plugin-node/tsconfig.json
@@ -5,6 +5,7 @@
     "strict": true,
     "declaration": true,
     "noUnusedLocals": true,
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     // compile away optional-chaining-operator
