--- a/package.json
+++ b/package.json
@@ -3,5 +3,6 @@
 		"@antfu/eslint-config": "^0.23.0",
 		"eslint": "^8.15.0",
 		"typescript": "^4.6.4"
-	}
+	},
+	"packageManager": "pnpm@9.0.6+sha1.648f6014eb363abb36618f2ba59282a9eeb3e879"
 }
