--- a/packages/vite-plugin-node/tsconfig.json
+++ b/packages/vite-plugin-node/tsconfig.json
@@ -1,22 +1,10 @@
 {
-  "rootDir": "src",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "moduleResolution": "node",
-    "strict": true,
-    "declaration": true,
-    "noUnusedLocals": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    // compile away optional-chaining-operator
-    // node support table: https://node.green/#ES2020-features-optional-chaining-operator-----
-    "target": "ES2018",
-    "outDir": "./dist",
-    "module": "commonjs",
-    "lib": [
-      "ESNext",
-      "dom"
-    ],
-    "sourceMap": true
-  }
+    "outDir": "dist",
+    "noEmit": false
+  },
+  "include": [
+    "./src/**/*"
+  ]
 }
