--- a/examples/cloudfunction/package.json
+++ b/examples/cloudfunction/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-example",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@swc/core": "^1.2.155",
+    "@types/express": "^4.17.13",
     "vite": "^5.0.0",
     "vite-plugin-node": "workspace:*"
   }
