--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-example",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
     "vite": "^5.0.0",
     "vite-plugin-node": "workspace:*"
   }
