--- a/examples/fastify/package.json
+++ b/examples/fastify/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fastify-example",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
