--- a/examples/initAppOnBoot/package.json
+++ b/examples/initAppOnBoot/package.json
@@ -1,7 +1,7 @@
 {
   "name": "init-app-on-boot-example",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "vite": "^5.0.0",
     "vite-plugin-node": "workspace:*"
   }
