--- a/examples/koa/package.json
+++ b/examples/koa/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-example",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,7 @@
     "koa": "^2.13.3"
   },
   "devDependencies": {
+    "@types/koa": "^2.13.4",
     "vite": "^5.0.0",
     "vite-plugin-node": "workspace:*"
   }
