--- a/examples/marble/package.json
+++ b/examples/marble/package.json
@@ -2,7 +2,7 @@
   "name": "marble-example",
   "version": "1.0.0",
   "description": "Marble.js test",
-  "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -24,7 +24,7 @@
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "@types/node": "14",
+    "@types/node": "^18.0.0",
     "vite": "^5.0.0",
     "vite-plugin-node": "workspace:*"
   }
