v4 - add vite 5 support

--- a/packages/vite-plugin-node/tsconfig.json
+++ b/packages/vite-plugin-node/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "rootDir": "src",
   "compilerOptions": {
+    "skipLibCheck": true,
     "moduleResolution": "node",
     "strict": true,
     "declaration": true,
