--- a/examples/marble/package.json
+++ b/examples/marble/package.json
@@ -24,8 +24,8 @@
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "@types/node": "14",
-    "vite": "^4.0.4",
+    "@types/node": "^18.19.55",
+    "vite": "^5.0.0",
     "vite-plugin-node": "workspace:*"
   }
 }
