--- a/packages/vite-plugin-node/package.json
+++ b/packages/vite-plugin-node/package.json
@@ -38,7 +38,7 @@
   },
   "peerDependencies": {
     "@swc/core": "^1.7.26",
-    "vite": "^5.0.0"
+    "vite": ">=5.0.0"
   },
   "peerDependenciesMeta": {
     "@swc/core": {
