--- a/examples/apollo/package.json
+++ b/examples/apollo/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
-    "vite": "^5.0.0",
+    "vite": "catalog:",
     "vite-plugin-node": "workspace:*"
   }
 }
