--- a/examples/marble/package.json
+++ b/examples/marble/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.19.55",
-    "vite": "^5.0.0",
+    "vite": "catalog:",
     "vite-plugin-node": "workspace:*"
   }
 }
