--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-	"devDependencies": {
-		"@antfu/eslint-config": "^0.23.0",
-		"eslint": "^8.15.0",
-		"typescript": "^5.6.3"
-	}
+  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af",
+  "devDependencies": {
+    "@antfu/eslint-config": "^0.23.0",
+    "eslint": "^8.15.0",
+    "typescript": "^5.6.3"
+  }
 }
