--- a/packages/vite-plugin-node/package.json
+++ b/packages/vite-plugin-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-node",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "description": "Vite plugin to enable your node server HMR",
   "author": "Axe",
   "license": "MIT",
@@ -38,7 +38,7 @@
   },
   "peerDependencies": {
     "@swc/core": "^1.7.26",
-    "vite": "^5.0.0"
+    "vite": "catalog:"
   },
   "peerDependenciesMeta": {
     "@swc/core": {
@@ -64,6 +64,6 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
-    "vite": "^5.4.8"
+    "vite": "catalog:"
   }
 }
