--- a/packages/vite-plugin-node/package.json
+++ b/packages/vite-plugin-node/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@rollup/pluginutils": "^4.1.1",
     "chalk": "^4.1.2",
+    "debounce": "^2.2.0",
     "debug": "^4.3.2"
   },
   "peerDependencies": {
