--- a/examples/marble/package.json
+++ b/examples/marble/package.json
@@ -24,7 +24,7 @@
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "@types/node": "^20.19.0",
+    "@types/node": "catalog:",
     "vite": "catalog:",
     "vite-plugin-node": "workspace:*"
   }
