--- a/packages/vite-plugin-node/package.json
+++ b/packages/vite-plugin-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-node",
-  "version": "6.0.0",
+  "version": "7.0.0",
   "description": "Vite plugin to enable your node server HMR",
   "author": "Axe",
   "license": "MIT",
@@ -49,13 +49,14 @@
   "devDependencies": {
     "@marblejs/core": "^4.0.2",
     "@marblejs/http": "^4.0.2",
-    "@nestjs/common": "^8.0.9",
+    "@nestjs/common": "catalog:",
+    "@nestjs/platform-fastify": "^11.1.3",
     "@swc/core": "^1.7.26",
     "@types/debug": "^4.1.7",
     "@types/estree": "^0.0.50",
     "@types/express": "^4.17.13",
     "@types/koa": "^2.13.4",
-    "@types/node": "^20.19.0",
+    "@types/node": "catalog:",
     "@types/rx": "^4.1.2",
     "express": "^4.17.1",
     "fastify": "^3.22.0",
